Changed how group duration is set, and added a per-task description

--- a/app/views/goal_tasks/_goal_task.html.slim
+++ b/app/views/goal_tasks/_goal_task.html.slim
@@ -7,3 +7,4 @@ li class=(goal_task.complete?(user) ? 'task-complete' : '')
       .check
   p.points #{goal_task.points} points
   h4.title= goal_task.name
+  p.description= goal_task.current_description
