--- a/app/assets/stylesheets/components/_tasks.css.sass
+++ b/app/assets/stylesheets/components/_tasks.css.sass
@@ -35,8 +35,12 @@
         border: none
 
     > h4.title
-      line-height: 30px
+      // line-height: 30px
       margin: 0
+
+    > p.description
+      color: #999
+
 
     .points
       float: right
@@ -51,6 +55,9 @@
       > h4.title
         text-decoration: line-through
         color: #ccc
+
+      > p.description
+        color: #d5d5d5
 
 .task-date-selector
   background: #ddd
