Added task specific descriptions

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -3,8 +3,12 @@
 @import "bootstrap-sprockets"
 @import "bootstrap"
 
+@import "base/settings"
 
 @import "mixins"
 
+@import "base/base"
+
 @import "components/group"
+@import "components/member"
 @import "components/tasks"
