--- a/app/assets/stylesheets/components/_tasks.css.sass
+++ b/app/assets/stylesheets/components/_tasks.css.sass
@@ -42,6 +42,8 @@
       color: #999
       margin: 0
 
+    .interval
+      margin-right: .7em
 
     .points
       float: right
@@ -59,6 +61,10 @@
 
       > p.description
         color: #d5d5d5
+
+  &.tasks-weekly
+    border-top: 1px solid #eee
+    padding-top: 1px
 
 .task-date-selector
   background: #ddd
