Some final tweaks before mvp

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,7 +8,9 @@
 @import "mixins"
 
 @import "base/base"
+@import "base/typography"
 
 @import "components/group"
 @import "components/member"
+@import "components/paneling"
 @import "components/tasks"
