--- a/app/assets/stylesheets/components/_tasks.css.sass
+++ b/app/assets/stylesheets/components/_tasks.css.sass
@@ -7,8 +7,7 @@
     +clearfix()
     padding: 2rem 1.5rem
     background: #fff
-    border: 1px solid #eee
-    border-width: 1px 0
+    border-top: 1px solid #eee
 
     .checkbox
       display: block
@@ -62,12 +61,13 @@
       > p.description
         color: #d5d5d5
 
+    // &:last-child
+
   &.tasks-weekly
     border-top: 1px solid #eee
     padding-top: 1px
 
 .task-date-selector
-  background: #ddd
   +clearfix()
   .date-navigation
     display: block
@@ -77,6 +77,8 @@
     text-align: center
     vertical-align: middle
     padding: 10px
+    border: 1px solid #eee
+    border-width: 0 1px 0 0
 
     > span
       font-size: 20px
@@ -84,6 +86,7 @@
 
     &.date-navigation-right
       float: right
+      border-width: 0 0 0 1px
 
   .task-date-display
     text-align: center
