--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -1,24 +1,25 @@
 - model_class = Group
 
-.page-header
+.panel.padding
   h1= link_to @group.name, group_path(@group)
   .group-description= markdown @group.description
 
-.task-date-selector
+.panel.task-date-selector
   = link_to group_path(@group, display_date: @display_date - 1.day), class: 'date-navigation' do
     span.glyphicon.glyphicon-menu-left
   = link_to group_path(@group, display_date: @display_date + 1.day), class: 'date-navigation date-navigation-right' do
     span.glyphicon.glyphicon-menu-right
-  .task-date-display= @display_date.to_s :long_ordinal
+  .task-date-display
+    = @display_date.to_s :long_ordinal
+    |  - Day #{@group_date_service.days_since_beginning}
 
-.member-tasks
+.panel.member-tasks
   .task-progress
     .task-progress-fill style="width: #{@group_date_service.point_percentage(current_user)}"
-
   = render 'shared/user_tasks', user: current_user, group_date_service: @group_date_service
 
 - @other_members.each do |user|
-  .member-tasks
+  .panel.member-tasks
     header
       = image_tag user.image, class: 'member-image'
       h5= user.name
