Added collapseable description

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,4 @@
-
+@import "bourbon"
 @import "bootstrap_configuration"
 @import "bootstrap-sprockets"
 @import "bootstrap"
@@ -6,6 +6,7 @@
 @import "base/settings"
 
 @import "mixins"
+@import "helpers"
 
 @import "base/base"
 @import "base/typography"
