--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -26,4 +26,4 @@
       h5= user.name
     .task-progress
       .task-progress-fill style="width: #{@group_date_service.point_percentage(user)}"
-    = render 'shared/user_tasks', user: user, group_date_service: @group_date_service
+    = render 'shared/small_user_tasks', user: user, group_date_service: @group_date_service
