Bolded completed points

--- a/app/assets/stylesheets/components/_tasks.css.sass
+++ b/app/assets/stylesheets/components/_tasks.css.sass
@@ -66,6 +66,7 @@ $success-text: darken($success-color, 5%)
 
       .points
         color: $success-text
+        font-weight: bold
 
     // &:last-child
 
