--- a/app/assets/stylesheets/components/_tasks.sass
+++ b/app/assets/stylesheets/components/_tasks.sass
@@ -48,10 +48,9 @@ $success-text: darken($success-color, 5%)
       margin-right: .7em
 
     .points
-      float: right
+      // float: right
       color: #999
-      line-height: 30px
-      margin: 0
+      margin: .4em 0 0
 
     &.task-complete
       .check
@@ -79,7 +78,7 @@ $success-text: darken($success-color, 5%)
       padding-bottom: .3rem
 
       .points
-        line-height: 1.3em
+        margin-top: .1em
 
       .checkbox
         border: none
@@ -146,10 +145,14 @@ $success-text: darken($success-color, 5%)
 
 .task-progress
   background: #f9f9f9
-  height: 10px
   border-radius: 5px
 
   .task-progress-fill
     background: $success-color
     height: 10px
+
+  &.task-progress-week
+    .task-progress-fill
+      background-color: $brand-primary
+      height: 5px
 
