--- a/app/views/shared/_small_user_tasks.html.slim
+++ b/app/views/shared/_small_user_tasks.html.slim
@@ -1,6 +1,8 @@
 ul.tasks.tasks-small
+  = render 'shared/progress', width: @group_date_service.point_percentage(user)
   = render partial: 'goal_tasks/small_goal_task', collection: group_date_service.incomplete_tasks(user), as: :goal_task, locals: { user: user }
   = render partial: 'goal_tasks/small_goal_task', collection: group_date_service.complete_tasks(user), as: :goal_task, locals: { user: user }
 ul.tasks.tasks-weekly.tasks-small
+  = render 'shared/progress', width: @group_date_service.point_percentage_week(user)
   = render partial: 'goal_tasks/small_goal_task', collection: group_date_service.incomplete_weekly_tasks(user), as: :goal_task, locals: { user: user }
   = render partial: 'goal_tasks/small_goal_task', collection: group_date_service.complete_weekly_tasks(user), as: :goal_task, locals: { user: user }
