--- a/app/assets/stylesheets/components/_tasks.sass
+++ b/app/assets/stylesheets/components/_tasks.sass
@@ -102,6 +102,11 @@ $success-text: darken($success-color, 5%)
       background-color: $brand-primary
       height: 5px
 
+    &.tasks-small
+      .task-progress .task-progress-fill
+        background-color: $brand-primary
+        height: 2px
+
 .task-date-selector
   +clearfix()
   .date-navigation
